--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
 
-  <title></title>
+  <title>&#65279;</title>
 </head>
 
 <body>
